Switch from InstanceType to single instance in InstanceTypeList
All integration tests changed except for the:
* test_scaling, for which we want to keep testing the same instance launch API
* test_fast_capacity_failover, for which we use the run_instance override to simulate capacity failure

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
@@ -14,7 +14,8 @@ Scheduling:
     - Name: compute
       ComputeResources:
         - Name: cit
-          InstanceType: {{ compute_instance_type }}
+          InstanceTypeList:
+            - InstanceType: {{ compute_instance_type }}
           MinCount: 2
           MaxCount: 150
       Networking:
