--- a/tests/integration-tests/tests/networking/test_cluster_networking/test_cluster_in_no_internet_subnet/pcluster.config.yaml
+++ b/tests/integration-tests/tests/networking/test_cluster_networking/test_cluster_in_no_internet_subnet/pcluster.config.yaml
@@ -32,7 +32,8 @@ Scheduling:
   - Name: queue-0
     ComputeResources:
       - Name: compute-resource-0
-        InstanceType: {{ instance }}
+        InstanceTypeList:
+          - InstanceType: {{ instance }}
         MinCount: 1
         MaxCount: 2
     Networking:
