--- a/tests/integration-tests/tests/performance_tests/test_simple/test_simple/pcluster.config.yaml
+++ b/tests/integration-tests/tests/performance_tests/test_simple/test_simple/pcluster.config.yaml
@@ -25,7 +25,8 @@ Scheduling:
     - Name: compute
       ComputeResources:
         - Name: res-1
-          InstanceType: {{ compute_instance_type }}
+          InstanceTypeList:
+            - InstanceType: {{ compute_instance_type }}
           MinCount: 0
           MaxCount: {{ num_compute_nodes }}
           DisableSimultaneousMultithreading: {{ multithreading_disabled }}
