--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_memory_based_scheduling/pcluster.config.update-schedulable-memory.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_memory_based_scheduling/pcluster.config.update-schedulable-memory.yaml
@@ -21,13 +21,16 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: ondemand1-i1
-          InstanceType: c5.large
+          InstanceTypeList:
+            - InstanceType: c5.large
           MinCount: 1
           SchedulableMemory: 3000
         - Name: ondemand1-i2
-          InstanceType: {{ instance }}
+          InstanceTypeList:
+            - InstanceType: {{ instance }}
         - Name: ondemand1-i3
-          InstanceType: c5.4xlarge
+          InstanceTypeList:
+            - InstanceType: c5.4xlarge
           MinCount: 0
           SchedulableMemory: 31400
 SharedStorage:
