--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.yaml
@@ -20,7 +20,8 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: broken-static
-          InstanceType: c5.large # instance type has bootstrap failure
+          InstanceTypeList:
+            - InstanceType: c5.large # instance type has bootstrap failure
       Iam:
         S3Access:
           - BucketName: {{ bucket }}
@@ -31,9 +32,11 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: broken-dynamic
-          InstanceType: c5.large # instance type has bootstrap failure
+          InstanceTypeList:
+            - InstanceType: c5.large # instance type has bootstrap failure
         - Name: working-static
-          InstanceType: c5.xlarge # instance type works as expected
+          InstanceTypeList:
+            - InstanceType: c5.xlarge # instance type works as expected
       Iam:
         S3Access:
           - BucketName: {{ bucket }}
@@ -44,7 +47,8 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: normal
-          InstanceType: c5.xlarge # instance type works as expected
+          InstanceTypeList:
+            - InstanceType: c5.xlarge # instance type works as expected
       Iam:
         S3Access:
           - BucketName: {{ bucket }}
