--- a/tests/integration-tests/tests/spot/test_spot/test_spot_default/pcluster.config.yaml
+++ b/tests/integration-tests/tests/spot/test_spot/test_spot_default/pcluster.config.yaml
@@ -15,7 +15,8 @@ Scheduling:
       CapacityType: SPOT
       ComputeResources:
         - Name: compute-i1
-          InstanceType: {{ instance }}
+          InstanceTypeList:
+            - InstanceType: {{ instance }}
           MinCount: {{ min_count }}
       Networking:
         SubnetIds:
