--- a/tests/integration-tests/tests/update/test_update/test_update_compute_ami/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_update_compute_ami/pcluster.config.update.yaml
@@ -17,11 +17,13 @@ Scheduling:
             Size: 200
       ComputeResources:
         - Name: queue1-i1
-          InstanceType: c5.xlarge
+          InstanceTypeList:
+            - InstanceType: c5.xlarge
           MinCount: 1
           MaxCount: 2
         - Name: queue1-i2
-          InstanceType: t2.micro
+          InstanceTypeList:
+            - InstanceType: t2.micro
           MinCount: 1
           MaxCount: 2
       Networking:
