--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update2.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update2.yaml
@@ -14,7 +14,8 @@ Scheduling:
     - Name: compute
       ComputeResources:
         - Name: cit
-          InstanceType: {{ compute_instance_type }}
+          InstanceTypeList:
+            - InstanceType: {{ compute_instance_type }}
           MinCount: 2
           MaxCount: 150
       Networking:
