--- a/tests/integration-tests/tests/createami/test_createami/test_kernel4_build_image_run_cluster/pcluster.config.yaml
+++ b/tests/integration-tests/tests/createami/test_createami/test_kernel4_build_image_run_cluster/pcluster.config.yaml
@@ -22,5 +22,6 @@ Scheduling:
         InstanceTypes:
           - {{ instance }}
         {% else %}
-        InstanceType: {{ instance }}
+        InstanceTypeList:
+          - InstanceType: {{ instance }}
         {% endif %}
